
[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_a_couple_of_specific_extractors_enabled_individually - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "2023-11-08T04:05:08.868477Z"
        }
      ]
    },
    {}
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_a_couple_of_specific_extractors_enabled_individually#01 - 1]
{
  "results": [
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_a_couple_of_specific_extractors_enabled_specified_together - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "2023-11-08T04:05:08.868477Z"
        }
      ]
    },
    {}
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_a_couple_of_specific_extractors_enabled_specified_together#01 - 1]
{
  "results": [
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_an_extractor_that_does_not_exist - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "2023-11-08T04:05:08.868477Z"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_an_extractor_that_does_not_exist#01 - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_one_specific_extractor_disabled - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "2025-10-14T04:20:58.312543Z"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_one_specific_extractor_disabled#01 - 1]
{
  "results": [
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_one_specific_extractor_enabled_and_no_defaults - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "2023-11-08T04:05:08.868477Z"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_directory_with_one_specific_extractor_enabled_and_no_defaults#01 - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_file_with_one_specific_extractor_enabled - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "2023-11-08T04:05:08.868477Z"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithoutDefaults/TestCommand_ExplicitExtractors_WithoutDefaults/scanning_file_with_one_specific_extractor_enabled#01 - 1]
{
  "results": [
    {}
  ]
}

---
